<resources>
    <string name="app_name">Florence</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FLORENCE</string>
    <string name="nav_header_subtitle">florence@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home">Home</string>
    <string name="contact">Contact</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? <u>Sign Up</u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_florence">Restaurant Florence</string>
    <string name="description_restaurant1">Centrul de evenimente, Florence este locul în care veți regăsi cele mai variate opțiuni pentru organizarea oricăror tipuri de evenimente din viața dvs., fiind unic prin design și versalitatate.</string>
    <string name="description_restaurant2"> Florence vă oferă posibilitatea de a accesa un set de servicii și facilități integrate, dedicate evenimentelor private, corporate sau evenimentelor publice.</string>
    <string name="addressRestaurant">Șoseaua Alexandru Ioan Cuza, Nr. 43</string>
    <string name="phone">0723 352 535</string>
    <string name="address">Address</string>
    <string name="phoneClient">Phone</string>

</resources>