<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <FrameLayout
        android:id="@+id/main_frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/imageTitle"
            android:layout_width="363dp"
            android:layout_height="49dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/title_restaurant_florence" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="353dp"
            android:layout_height="225dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="90dp"
            android:src="@drawable/decoratiune" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_gravity="center_horizontal"
            android:textSize="16dp"
            android:textStyle="italic"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:justificationMode="inter_word"
            android:textColor="@android:color/black"
            android:text="@string/description_restaurant1"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="450dp"
            android:layout_marginRight="15dp"
            android:justificationMode="inter_word"
            android:text="@string/description_restaurant2"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:textStyle="italic"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="550dp"
            android:layout_marginRight="15dp"
            android:justificationMode="inter_word"
            android:text="@string/address"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:textStyle="italic"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="580dp"
            android:layout_marginRight="15dp"
            android:justificationMode="inter_word"
            android:text="@string/phone"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:textStyle="italic"></TextView>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="143dp"
            android:layout_height="139dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="510dp"
            android:src="@drawable/logo2" />




    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>